test/sema/positive/borrowsema/read_immut_borrowed.impala
fn f() -> () {
    let a = 5;
    let b = &a;
    let c = a;
    let d = *b;
    let e = b;
}
