test/sema/negative/movesema/array_move.impala
fn f() -> () {
    let a = [~4, ~5, ~1];
    let b = a(1);
    let c = a(0);
}
